--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_yes">ДА</string>
+    <string name="label_no">НЕТ</string>
+    <string name="label_ok">OK</string>
     <string name="title_activity_register">Register</string>
     <string name="title_activity_qrcanner">QR Scanner</string>
 
